Change output directory

--- a/nih_reporter_query.ipynb
+++ b/nih_reporter_query.ipynb
@@ -885,7 +885,7 @@
    "source": [
     "# save the data\n",
     "today = datetime.today().strftime(\"%Y%m%d\")\n",
-    "csv_file = \"tmp/nih_data-\" + today + \".csv\"\n",
+    "csv_file = f\"/Users/jpn8428/Documents/Nature/Programming/nih_reporter/data/nih_data-{today}.csv\"\n",
     "df.to_csv(csv_file, index = False)\n",
     "\n",
     "print(f\"CSV file '{csv_file}' created successfully.\")"
