"Update code for Jack. Add R script to iterate over URLs."

--- a/nih_reporter_query_w_urls.ipynb
+++ b/nih_reporter_query_w_urls.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "d5ea884c-101e-497b-b21d-b820896fe0b6",
    "metadata": {},
    "outputs": [
@@ -120,13 +120,13 @@
     "                dfdata['project_url'].append(award_url)\n",
     "                dfdata['keyword'].append(term)\n",
     "        else:\n",
-    "            print(f\">> No awards found for {date_str}\")\n",
+    "            print(f\">> No awards found for term {term}\")\n",
     "            \n",
     "    else:\n",
     "        print(f\"Error: {response.status_code} - {response.text}\")\n",
     "\n",
     "    # Move to the next day\n",
-    "    current_date += timedelta(days=1)\n",
+    "    # current_date += timedelta(days=1)\n",
     "\n",
     "    # Wait for 1 second before making the next request\n",
     "    time.sleep(1)\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "660a6378-9e0d-4bca-977f-9e291b3af7eb",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "083797c3-530a-4d69-946c-390203d3ce0c",
    "metadata": {},
    "outputs": [
@@ -284,18 +284,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     award_date   project_number  award_amount award_type                                        project_url    keyword\n",
-       "0    01/10/2024  5G13LM014176-02         49762          5  https://reporter.nih.gov/project-details/10757924  diversity\n",
-       "1    01/01/2024  1T32HL172255-01        309555          1  https://reporter.nih.gov/project-details/10809399  diversity\n",
-       "2    01/24/2024  5R24OD024617-07        779278          5  https://reporter.nih.gov/project-details/10764712  diversity\n",
-       "3    01/19/2024  5R25HL103156-14         93528          5  https://reporter.nih.gov/project-details/10771961  diversity\n",
-       "4    01/26/2024  1R13OD036186-01          5000          1  https://reporter.nih.gov/project-details/10826020  diversity\n",
-       "..          ...              ...           ...        ...                                                ...        ...\n",
-       "414  01/25/2024  5R01MH121194-04        642346          5  https://reporter.nih.gov/project-details/10774201      LGBTQ\n",
-       "415  01/08/2024  5R13EY030356-05         60000          5  https://reporter.nih.gov/project-details/10757386      LGBTQ\n",
-       "416  01/26/2024  5R21HD108052-02        235128          5  https://reporter.nih.gov/project-details/10752716      LGBTQ\n",
-       "417  01/26/2024  5P30MH133399-02       2169482          5  https://reporter.nih.gov/project-details/10817201      LGBTQ\n",
-       "418  01/18/2024  5R21MH129186-02        286563          5  https://reporter.nih.gov/project-details/10783810      LGBTQ\n",
+       "     award_date   project_number  ...                                        project_url    keyword\n",
+       "0    01/10/2024  5G13LM014176-02  ...  https://reporter.nih.gov/project-details/10757924  diversity\n",
+       "1    01/01/2024  1T32HL172255-01  ...  https://reporter.nih.gov/project-details/10809399  diversity\n",
+       "2    01/24/2024  5R24OD024617-07  ...  https://reporter.nih.gov/project-details/10764712  diversity\n",
+       "3    01/19/2024  5R25HL103156-14  ...  https://reporter.nih.gov/project-details/10771961  diversity\n",
+       "4    01/26/2024  1R13OD036186-01  ...  https://reporter.nih.gov/project-details/10826020  diversity\n",
+       "..          ...              ...  ...                                                ...        ...\n",
+       "414  01/25/2024  5R01MH121194-04  ...  https://reporter.nih.gov/project-details/10774201      LGBTQ\n",
+       "415  01/08/2024  5R13EY030356-05  ...  https://reporter.nih.gov/project-details/10757386      LGBTQ\n",
+       "416  01/26/2024  5R21HD108052-02  ...  https://reporter.nih.gov/project-details/10752716      LGBTQ\n",
+       "417  01/26/2024  5P30MH133399-02  ...  https://reporter.nih.gov/project-details/10817201      LGBTQ\n",
+       "418  01/18/2024  5R21MH129186-02  ...  https://reporter.nih.gov/project-details/10783810      LGBTQ\n",
        "\n",
        "[419 rows x 6 columns]"
       ]
@@ -341,48 +341,54 @@
        "      <th>award_amount</th>\n",
        "      <th>award_type</th>\n",
        "      <th>project_url</th>\n",
+       "      <th>keyword</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>5R21MH125227-02</td>\n",
-       "      <td>226590</td>\n",
+       "      <td>2024-01-10</td>\n",
+       "      <td>5G13LM014176-02</td>\n",
+       "      <td>49762</td>\n",
        "      <td>5</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10320445</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10757924</td>\n",
+       "      <td>diversity</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>5R01MH114877-05</td>\n",
-       "      <td>412500</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10299619</td>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>1T32HL172255-01</td>\n",
+       "      <td>309555</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10809399</td>\n",
+       "      <td>diversity</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>5R01MH104559-09</td>\n",
-       "      <td>632786</td>\n",
+       "      <td>2024-01-24</td>\n",
+       "      <td>5R24OD024617-07</td>\n",
+       "      <td>779278</td>\n",
        "      <td>5</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10294226</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10764712</td>\n",
+       "      <td>diversity</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>5R01EB027717-03</td>\n",
-       "      <td>625925</td>\n",
+       "      <td>2024-01-19</td>\n",
+       "      <td>5R25HL103156-14</td>\n",
+       "      <td>93528</td>\n",
        "      <td>5</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10304119</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10771961</td>\n",
+       "      <td>diversity</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2021-11-02</td>\n",
-       "      <td>5R01NS094154-07</td>\n",
-       "      <td>445993</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10306409</td>\n",
+       "      <td>2024-01-26</td>\n",
+       "      <td>1R13OD036186-01</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10826020</td>\n",
+       "      <td>diversity</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -391,67 +397,73 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1026</th>\n",
-       "      <td>2021-12-02</td>\n",
-       "      <td>5K24HL152143-02</td>\n",
-       "      <td>114463</td>\n",
+       "      <th>414</th>\n",
+       "      <td>2024-01-25</td>\n",
+       "      <td>5R01MH121194-04</td>\n",
+       "      <td>642346</td>\n",
        "      <td>5</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10312807</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10774201</td>\n",
+       "      <td>LGBTQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1027</th>\n",
-       "      <td>2021-12-01</td>\n",
-       "      <td>2R01NS044057-19</td>\n",
-       "      <td>382090</td>\n",
-       "      <td>2</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10366443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1028</th>\n",
-       "      <td>2021-12-02</td>\n",
-       "      <td>5R01HL114541-08</td>\n",
-       "      <td>720435</td>\n",
+       "      <th>415</th>\n",
+       "      <td>2024-01-08</td>\n",
+       "      <td>5R13EY030356-05</td>\n",
+       "      <td>60000</td>\n",
        "      <td>5</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10320358</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10757386</td>\n",
+       "      <td>LGBTQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1029</th>\n",
-       "      <td>2021-12-02</td>\n",
-       "      <td>5R01NS115977-02</td>\n",
-       "      <td>378750</td>\n",
+       "      <th>416</th>\n",
+       "      <td>2024-01-26</td>\n",
+       "      <td>5R21HD108052-02</td>\n",
+       "      <td>235128</td>\n",
        "      <td>5</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10319132</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10752716</td>\n",
+       "      <td>LGBTQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1030</th>\n",
-       "      <td>2021-12-01</td>\n",
-       "      <td>7K08NS105938-05</td>\n",
-       "      <td>200178</td>\n",
-       "      <td>7</td>\n",
-       "      <td>https://reporter.nih.gov/project-details/10495033</td>\n",
+       "      <th>417</th>\n",
+       "      <td>2024-01-26</td>\n",
+       "      <td>5P30MH133399-02</td>\n",
+       "      <td>2169482</td>\n",
+       "      <td>5</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10817201</td>\n",
+       "      <td>LGBTQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418</th>\n",
+       "      <td>2024-01-18</td>\n",
+       "      <td>5R21MH129186-02</td>\n",
+       "      <td>286563</td>\n",
+       "      <td>5</td>\n",
+       "      <td>https://reporter.nih.gov/project-details/10783810</td>\n",
+       "      <td>LGBTQ</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1031 rows × 5 columns</p>\n",
+       "<p>419 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     award_date   project_number  award_amount award_type                                        project_url\n",
-       "0    2021-11-01  5R21MH125227-02        226590          5  https://reporter.nih.gov/project-details/10320445\n",
-       "1    2021-11-01  5R01MH114877-05        412500          5  https://reporter.nih.gov/project-details/10299619\n",
-       "2    2021-11-01  5R01MH104559-09        632786          5  https://reporter.nih.gov/project-details/10294226\n",
-       "3    2021-11-01  5R01EB027717-03        625925          5  https://reporter.nih.gov/project-details/10304119\n",
-       "4    2021-11-02  5R01NS094154-07        445993          5  https://reporter.nih.gov/project-details/10306409\n",
-       "...         ...              ...           ...        ...                                                ...\n",
-       "1026 2021-12-02  5K24HL152143-02        114463          5  https://reporter.nih.gov/project-details/10312807\n",
-       "1027 2021-12-01  2R01NS044057-19        382090          2  https://reporter.nih.gov/project-details/10366443\n",
-       "1028 2021-12-02  5R01HL114541-08        720435          5  https://reporter.nih.gov/project-details/10320358\n",
-       "1029 2021-12-02  5R01NS115977-02        378750          5  https://reporter.nih.gov/project-details/10319132\n",
-       "1030 2021-12-01  7K08NS105938-05        200178          7  https://reporter.nih.gov/project-details/10495033\n",
+       "    award_date   project_number  ...                                        project_url    keyword\n",
+       "0   2024-01-10  5G13LM014176-02  ...  https://reporter.nih.gov/project-details/10757924  diversity\n",
+       "1   2024-01-01  1T32HL172255-01  ...  https://reporter.nih.gov/project-details/10809399  diversity\n",
+       "2   2024-01-24  5R24OD024617-07  ...  https://reporter.nih.gov/project-details/10764712  diversity\n",
+       "3   2024-01-19  5R25HL103156-14  ...  https://reporter.nih.gov/project-details/10771961  diversity\n",
+       "4   2024-01-26  1R13OD036186-01  ...  https://reporter.nih.gov/project-details/10826020  diversity\n",
+       "..         ...              ...  ...                                                ...        ...\n",
+       "414 2024-01-25  5R01MH121194-04  ...  https://reporter.nih.gov/project-details/10774201      LGBTQ\n",
+       "415 2024-01-08  5R13EY030356-05  ...  https://reporter.nih.gov/project-details/10757386      LGBTQ\n",
+       "416 2024-01-26  5R21HD108052-02  ...  https://reporter.nih.gov/project-details/10752716      LGBTQ\n",
+       "417 2024-01-26  5P30MH133399-02  ...  https://reporter.nih.gov/project-details/10817201      LGBTQ\n",
+       "418 2024-01-18  5R21MH129186-02  ...  https://reporter.nih.gov/project-details/10783810      LGBTQ\n",
        "\n",
-       "[1031 rows x 5 columns]"
+       "[419 rows x 6 columns]"
       ]
      },
      "execution_count": null,
