"Commit update on main notebook."

--- a/nih_reporter_query.ipynb
+++ b/nih_reporter_query.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e62f7689-d142-45c0-9da6-de58d3d3f61f",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "d5ea884c-101e-497b-b21d-b820896fe0b6",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,6 @@
       "Querying award date: 01/09/2025\n",
       "Querying award date: 01/10/2025\n",
       "Querying award date: 01/11/2025\n",
-      "==> Error: HTTPSConnectionPool(host='api.reporter.nih.gov', port=443): Read timed out. (read timeout=3.05)\n",
       "Querying award date: 01/12/2025\n",
       ">> No awards found for 01/12/2025\n",
       "Querying award date: 01/13/2025\n",
@@ -453,7 +452,6 @@
       "Querying award date: 01/18/2025\n",
       "Querying award date: 01/19/2025\n",
       "Querying award date: 01/20/2025\n",
-      "==> Error: HTTPSConnectionPool(host='api.reporter.nih.gov', port=443): Read timed out. (read timeout=3.05)\n",
       "Querying award date: 01/21/2025\n",
       "Querying award date: 01/22/2025\n",
       "Querying award date: 01/23/2025\n",
@@ -574,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "660a6378-9e0d-4bca-977f-9e291b3af7eb",
    "metadata": {},
    "outputs": [],
@@ -584,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "083797c3-530a-4d69-946c-390203d3ce0c",
    "metadata": {},
    "outputs": [
@@ -659,35 +657,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45735</th>\n",
+       "      <th>45690</th>\n",
        "      <td>02/14/2025</td>\n",
        "      <td>5R01NS121405-05</td>\n",
        "      <td>394788</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45736</th>\n",
+       "      <th>45691</th>\n",
        "      <td>02/15/2025</td>\n",
        "      <td>3F32DC022145-01S1</td>\n",
        "      <td>3000</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45737</th>\n",
+       "      <th>45692</th>\n",
        "      <td>02/15/2025</td>\n",
        "      <td>5U01DC019405-04</td>\n",
        "      <td>409204</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45738</th>\n",
+       "      <th>45693</th>\n",
        "      <td>02/15/2025</td>\n",
        "      <td>5R01HL138456-08</td>\n",
        "      <td>672896</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45739</th>\n",
+       "      <th>45694</th>\n",
        "      <td>02/15/2025</td>\n",
        "      <td>7UH3HL145266-06</td>\n",
        "      <td>1110651</td>\n",
@@ -695,7 +693,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>45740 rows × 4 columns</p>\n",
+       "<p>45695 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -706,16 +704,16 @@
        "3      11/01/2021    5R37MH080046-15        714476          5\n",
        "4      11/01/2021    5R21MH125227-02        226590          5\n",
        "...           ...                ...           ...        ...\n",
-       "45735  02/14/2025    5R01NS121405-05        394788          5\n",
-       "45736  02/15/2025  3F32DC022145-01S1          3000          3\n",
-       "45737  02/15/2025    5U01DC019405-04        409204          5\n",
-       "45738  02/15/2025    5R01HL138456-08        672896          5\n",
-       "45739  02/15/2025    7UH3HL145266-06       1110651          7\n",
+       "45690  02/14/2025    5R01NS121405-05        394788          5\n",
+       "45691  02/15/2025  3F32DC022145-01S1          3000          3\n",
+       "45692  02/15/2025    5U01DC019405-04        409204          5\n",
+       "45693  02/15/2025    5R01HL138456-08        672896          5\n",
+       "45694  02/15/2025    7UH3HL145266-06       1110651          7\n",
        "\n",
-       "[45740 rows x 4 columns]"
+       "[45695 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "f62292cb-303a-4680-974a-c7480474d395",
    "metadata": {},
    "outputs": [
@@ -801,35 +799,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45735</th>\n",
+       "      <th>45690</th>\n",
        "      <td>2025-02-14</td>\n",
        "      <td>5R01NS121405-05</td>\n",
        "      <td>394788</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45736</th>\n",
+       "      <th>45691</th>\n",
        "      <td>2025-02-15</td>\n",
        "      <td>3F32DC022145-01S1</td>\n",
        "      <td>3000</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45737</th>\n",
+       "      <th>45692</th>\n",
        "      <td>2025-02-15</td>\n",
        "      <td>5U01DC019405-04</td>\n",
        "      <td>409204</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45738</th>\n",
+       "      <th>45693</th>\n",
        "      <td>2025-02-15</td>\n",
        "      <td>5R01HL138456-08</td>\n",
        "      <td>672896</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45739</th>\n",
+       "      <th>45694</th>\n",
        "      <td>2025-02-15</td>\n",
        "      <td>7UH3HL145266-06</td>\n",
        "      <td>1110651</td>\n",
@@ -837,7 +835,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>45740 rows × 4 columns</p>\n",
+       "<p>45695 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -848,16 +846,16 @@
        "3     2021-11-01    5R37MH080046-15        714476          5\n",
        "4     2021-11-01    5R21MH125227-02        226590          5\n",
        "...          ...                ...           ...        ...\n",
-       "45735 2025-02-14    5R01NS121405-05        394788          5\n",
-       "45736 2025-02-15  3F32DC022145-01S1          3000          3\n",
-       "45737 2025-02-15    5U01DC019405-04        409204          5\n",
-       "45738 2025-02-15    5R01HL138456-08        672896          5\n",
-       "45739 2025-02-15    7UH3HL145266-06       1110651          7\n",
+       "45690 2025-02-14    5R01NS121405-05        394788          5\n",
+       "45691 2025-02-15  3F32DC022145-01S1          3000          3\n",
+       "45692 2025-02-15    5U01DC019405-04        409204          5\n",
+       "45693 2025-02-15    5R01HL138456-08        672896          5\n",
+       "45694 2025-02-15    7UH3HL145266-06       1110651          7\n",
        "\n",
-       "[45740 rows x 4 columns]"
+       "[45695 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "1fcacab4-6911-45f1-96b5-96e19a1d0674",
    "metadata": {},
    "outputs": [
@@ -878,7 +876,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV file 'tmp/nih_data-20250219.csv' created successfully.\n"
+      "CSV file '~/Documents/Nature/Programming/nih_reporter/data/nih_data-20250221.csv' created successfully.\n"
      ]
     }
    ],
@@ -899,16 +897,7 @@
    "name": "conda-base-py"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "name": "python"
   }
  },
  "nbformat": 4,
