Modify search payload for 'autism', no keyword text.

--- a/nih_reporter_query.ipynb
+++ b/nih_reporter_query.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d5ea884c-101e-497b-b21d-b820896fe0b6",
    "metadata": {},
    "outputs": [
@@ -1995,8 +1995,8 @@
     "            \"exclude_subprojects\": True,\n",
     "            \"advanced_text_search\": {\n",
     "                \"operator\": \"or\",\n",
-    "                \"search_field\": \"projecttitle, terms, abstracttext\",\n",
-    "                \"search_text\": \"autism, autistic\" \n",
+    "                \"search_field\": \"projecttitle, abstracttext\",\n",
+    "                \"search_text\": \"autism\" \n",
     "            },\n",
     "        },\n",
     "        \"include_fields\": [\n",
